--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="opt_auto_turn_off">Automatically turn off the player after:</string>
     <string name="opt_keep_screen_on">Keep screen always on</string>
     <string name="opt_volume_control_type">Volume control type:</string>
+    <string name="opt_is_divider_visible">Show divider between items in lists</string>
+    <string name="opt_is_vertical_margin_large">Use large spacing between items in lists</string>
 	<string name="opt_block_back_key">Prevent the Back key from returning to the home screen</string>
     <string name="opt_double_click_mode">Use two clicks/touches to play songs in the playlist</string>
 	<string name="opt_marquee_title">Spin current song\'s title when it does not fit on the screen</string>
