--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -9,7 +9,6 @@
     <string name="system_info">Informações do sistema</string>
     <string name="nothing_playing">[Nada tocando]</string>
     <string name="oops">Oops&#8230;</string>
-    <string name="no_time">-</string>
     <string name="loading">Carregando&#8230;</string>
     <string name="empty_list">[Vazio]</string>
     <string name="error">Erro:</string>
@@ -17,6 +16,7 @@
     <string name="cancel">Cancelar</string>
     <string name="done">Pronto</string>
     <string name="got_it">Entendi!</string>
+    <string name="volume">Volume</string>
     <string name="msg_sel">Toque para selecionar mais</string>
     <string name="msg_move">Toque para mover a seleção</string>
     <string name="msg_adding">Adicionando músicas&#8230;</string>
@@ -24,8 +24,6 @@
     <string name="msg_select_folder_add">Por favor, selecione uma pasta para adicionar</string>
     <string name="msg_select_folder_play">Por favor, selecione uma música para tocar</string>
     <string name="msg_select_favorite_remove">Por favor, selecione um favorito para remover</string>
-    <string name="msg_select_item_load">Selecione uma %s para abrir</string>
-    <string name="msg_select_item_save">Selecione uma %s para sobrescrever, ou crie uma nova</string>
     <string name="msg_turn_off_title">Desligamento automático</string>
     <string name="msg_turn_off">Desligar o player depois de quantos minutos?</string>
     <string name="msg_enter_name">Digite um nome para a nova %s&#58;</string>
@@ -68,6 +66,7 @@
     <string name="minute">minuto</string>
     <string name="minutes">minutos</string>
     <string name="none">Nenhuma</string>
+    <string name="noneM">Nenhum</string>
     <string name="portrait">Retrato</string>
     <string name="landscape">Paisagem</string>
     <string name="dshort">Curta</string>
@@ -87,7 +86,6 @@
     <!-- &#9479;</string> &#8230;</string> -->
     <string name="add_songs">Adicionar músicas</string>
     <string name="control_mode">Modo controle</string>
-    <string name="leave_control_mode">Sair do modo controle</string>
     <string name="list">Lista&#8230;</string>
     <string name="clear_list">Limpar lista</string>
     <string name="load_list">Abrir lista</string>
@@ -134,7 +132,13 @@
     <string name="play">Tocar</string>
     <string name="add">Adicionar</string>
     <string name="unknownArtist">[Artista Desconhecido]</string>
-    <string name="artists">Artistas</string>
+    <string name="title">Título</string>
+    <string name="artist">Artista</string>
+	<string name="album">Álbum</string>
+	<string name="length">Duração</string>
+	<string name="year">Ano</string>
+	<string name="no_info">-</string>
+	<string name="artists">Artistas</string>
     <string name="albums">Álbuns</string>
     <string name="music">Música</string>
     <string name="downloads">Downloads</string>
