--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,6 @@
     <string name="system_info">System information</string>
     <string name="nothing_playing">[Nothing playing]</string>
     <string name="oops">Oops&#8230;</string>
-    <string name="no_time">-</string>
     <string name="loading">Loading&#8230;</string>
     <string name="empty_list">[Empty]</string>
     <string name="error">Error:</string>
@@ -17,6 +16,7 @@
     <string name="cancel">Cancel</string>
     <string name="done">Done</string>
     <string name="got_it">Got it!</string>
+    <string name="volume">Volume</string>
     <string name="msg_sel">Click to select more items</string>
     <string name="msg_move">Click to move selected items</string>
     <string name="msg_adding">Adding songs&#8230;</string>
@@ -24,8 +24,6 @@
     <string name="msg_select_folder_add">Please, select a folder to add</string>
     <string name="msg_select_folder_play">Please, select a folder to play</string>
     <string name="msg_select_favorite_remove">Please, select a favorite to remove</string>
-    <string name="msg_select_item_load">Select a %s to load</string>
-    <string name="msg_select_item_save">Select a %s to overwrite or create a new one</string>
     <string name="msg_turn_off_title">Automatic shutdown</string>
     <string name="msg_turn_off">Turn off the player after how many minutes?</string>
     <string name="msg_enter_name">Enter a name for the new %s&#58;</string>
@@ -68,6 +66,7 @@
     <string name="minute">minute</string>
     <string name="minutes">minutes</string>
     <string name="none">None</string>
+    <string name="noneM">None</string>
     <string name="portrait">Portrait</string>
     <string name="landscape">Landscape</string>
     <string name="dshort">Short</string>
@@ -87,7 +86,6 @@
     <!-- &#9479;</string> &#8230;</string> -->
     <string name="add_songs">Add songs</string>
     <string name="control_mode">Control mode</string>
-    <string name="leave_control_mode">Leave control mode</string>
     <string name="list">List&#8230;</string>
     <string name="clear_list">Clear list</string>
     <string name="load_list">Load list</string>
@@ -134,7 +132,13 @@
     <string name="play">Play</string>
     <string name="add">Add</string>
     <string name="unknownArtist">[Unknown Artist]</string>
-    <string name="artists">Artists</string>
+    <string name="title">Title</string>
+    <string name="artist">Artist</string>
+	<string name="album">Album</string>
+	<string name="length">Length</string>
+	<string name="year">Year</string>
+	<string name="no_info">-</string>
+	<string name="artists">Artists</string>
     <string name="albums">Albums</string>
     <string name="music">Music</string>
     <string name="downloads">Downloads</string>
