--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -5,8 +5,10 @@
     <string name="app_by">por Carlos Rafael Gimenes das Neves</string>
     <string name="app_description">Reprodutor de música simples e direto para Android, com equalizador</string>
     <string name="app_more_info">Procurando por mais informações?\nTalvez o código fonte?\nTem um pedido?\nEncontrou um bug?!?\nSó quer entrar em contato comigo? :)\n\nMande-me um e-mail:\ndev@carlosrafaelgn.com.br\nou visite o site do projeto do aplicativo no GitHub:\nhttps://github.com/carlosrafaelgn/FPlayAndroid\n\nRecursos gratuitos de terceiros utilizados no aplicativo:</string>
-    <string name="app_more_info2">\n\nA fonte utilizada como fonte amigável para dislexia é OpenDyslexic Regular, por Abelardo Gonzalez, disponível em http://dyslexicfonts.com\n\nOpenDyslexic por Abelardo Gonzalez é licensiado sob Creative Commons Attribution 3.0 Unported License.\n\nA fonte utilizada para desenhar os ícones escaláveis, icons.ttf, foi criada utilizando o IcoMoon App, por Keyamoon, disponível em:\nhttp://icomoon.io/app\n\nAlguns dos ícones escaláveis foram criados por mim e alguns vieram do conjunto IcoMoon Free, por Keyamoon, licenciado sob Creative Commons License 3.0.\n\nFPlay é licenciado sob os termos da FreeBSD License.\nCopyright &#169; 2013, Carlos Rafael Gimenes das Neves\nAll rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n \n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.</string>
+    <string name="app_more_info2">\n\nA fonte utilizada como fonte amigável para dislexia é OpenDyslexic Regular, por Abelardo Gonzalez, disponível em http://dyslexicfonts.com e licenciada sob Creative Commons Attribution 3.0 Unported License.\n\nA fonte utilizada para desenhar os ícones escaláveis, icons.ttf, foi criada utilizando o IcoMoon App, por Keyamoon, disponível em:\nhttp://icomoon.io/app\n\nAlguns dos ícones escaláveis foram criados por mim e alguns vieram do conjunto IcoMoon Free, por Keyamoon, licenciado sob Creative Commons License 3.0.\n\nFPlay é licenciado sob os termos da FreeBSD License.</string>
+    <string name="app_license">\n\nCopyright &#169; 2013, Carlos Rafael Gimenes das Neves\nAll rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n \n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.</string>
     <string name="system_info">Informações do sistema</string>
+    <string name="resolution">Resolução</string>
     <string name="nothing_playing">[Nada tocando]</string>
     <string name="oops">Oops&#8230;</string>
     <string name="loading">Carregando&#8230;</string>
@@ -79,11 +81,9 @@
     <string name="url">URL</string>
     <string name="description">Descrição</string>
     <string name="favorite">Favorito</string>
-    <!-- &#8624; Up</string> -->
     <string name="menu">Menu</string>
     <string name="decrease_volume">Diminuir volume</string>
     <string name="increase_volume">Aumentar volume</string>
-    <!-- &#9479;</string> &#8230;</string> -->
     <string name="add_songs">Adicionar músicas</string>
     <string name="control_mode">Modo controle</string>
     <string name="list">Lista&#8230;</string>
@@ -138,6 +138,8 @@
 	<string name="length">Duração</string>
 	<string name="year">Ano</string>
 	<string name="no_info">-</string>
+    <string name="language">Idioma</string>
+    <string name="standard_language">Idioma padrão</string>
 	<string name="artists">Artistas</string>
     <string name="albums">Álbuns</string>
     <string name="music">Música</string>
