Improved localization support + Added Ukrainian support

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -4,17 +4,17 @@
     <string name="fplay">FPlay</string>
     <string name="app_by">от Carlos Rafael Gimenes das Neves</string>
     <string name="app_description">Простой и понятный музыкальный плеер с эквалайзером для Android</string>
-    <string name="app_more_info">Нужна более подробная информация?\nВозможно интересует исходный код?\nЕсть предложение по развитию проекта?\nНашли ошибку в программе?!?\nПросто хотите пообщаться со мной? :)\n\nПишите на e-mail:\ndev@carlosrafaelgn.com.br\nили посетите сайт программыn\на GitHub:\nhttps://github.com/carlosrafaelgn/FPlayAndroid\n\nБесплатные сторонние ресурсы, используемые в приложении:</string>
+    <string name="app_more_info">Нужна более подробная информация?\nВозможно интересует исходный код?\nЕсть предложение по развитию проекта?\nНашли ошибку в программе?!?\nПросто хотите пообщаться со мной? :)\n\nПишите на e-mail:\ndev@carlosrafaelgn.com.br\nили посетите сайт программыn\на GitHub:\nhttps://github.com/carlosrafaelgn/FPlayAndroid\n\nОчень отдельное спасибо Sviat Hurskyi (sviat.hurskyi@gmail.com) для российских и украинских переводах!\n\nБесплатные сторонние ресурсы, используемые в приложении:</string>
     <string name="app_more_info2">\n\nШрифт OpenDyslexic Regular от Abelardo Gonzalez, используемый в качестве дислексического шрифта, доступен по ссылке: http://dyslexicfonts.com под лицензией Creative Commons Attribution 3.0 Unported License.\n\nШрифт, используемый для отображения масштабируемых пиктограмм, icons.ttf, создан, используя IcoMoon App, автор Keyamoon, доступен на сайте:\nhttp://icomoon.io/app\n\nНекоторые из масштабируемых пиктограмм были созданы мной, часть взята из набора иконок IcoMoon Free, автор Keyamoon, под лицензией Creative Commons License 3.0.\n\nFPlay лицензируется в соответствии с условиями лицензии FreeBSD.</string>
     <string name="app_license">\n\nCopyright &#169; 2013, Carlos Rafael Gimenes das Neves\nAll rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n \n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\nTHIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of the FreeBSD Project.</string>
     <string name="system_info">Системная информация</string>
     <string name="resolution">Разрешение</string>
     <string name="nothing_playing">[Ничего не воспроизводится]</string>
-    <string name="oops">Ой&#8230;</string>
+    <string name="oops">Извините&#8230;</string>
     <string name="loading">Загрузка&#8230;</string>
     <string name="empty_list">[Пустой список]</string>
     <string name="error">Ошибка:</string>
-    <string name="ok">OK</string>
+    <string name="ok">Готово</string>
     <string name="cancel">Отмена</string>
     <string name="done">Выполнено</string>
     <string name="got_it">Готово!</string>
@@ -39,41 +39,41 @@
     <string name="msg_play">Эта кнопка добавляет в список воспроизведения все композиции в папке и её подпапках и начинает воспроизведение.</string>
     <string name="msg_error_download_path">Отсутствует возможность получить доступ к папке загрузки :(</string>
     <string name="msg_error_exporting_settings">Что-то пошло не так при экспорте настроек :(</string>
-    <string name="opt_use_alternate_typeface">Использовать дислексический шрифт</string>
+    <string name="opt_use_alternate_typeface">Использовать дислексический шрифт (опция недоступна для данного языка)</string>
     <string name="opt_auto_turn_off">Автоматически выключить плеер после:</string>
     <string name="opt_keep_screen_on">Держать экран постоянно включённым</string>
     <string name="opt_volume_control_type">Тип регулятора громкости:</string>
-    <string name="opt_is_divider_visible">Показывать границу между элементами в спиках</string>
+    <string name="opt_is_divider_visible">Показывать границу между элементами в списках</string>
     <string name="opt_is_vertical_margin_large">Использовать большее расстояние между элементами в списках</string>
-    <string name="opt_handle_call_key">Использовать клавишу "Позвонить/Набор" как "Воспроизведение/Пауза" (тестовая функция)</string>
-    <string name="opt_play_when_headset_plugged">Автоматически включать воспроизведение при подключении гарнитуры (тестовая функция)</string>
-	<string name="opt_block_back_key">Заблокировать кнопку "Назад" возвращаться на главный экран</string>
+    <string name="opt_handle_call_key">Использовать клавишу "Позвонить/Набор" как "Воспроизведение/Пауза"</string>
+    <string name="opt_play_when_headset_plugged">Автоматически включать воспроизведение при подключении гарнитуры</string>
+	<string name="opt_block_back_key">Заблокировать кнопку "Назад", которая возвращает на главный экран</string>
     <string name="opt_double_click_mode">Использовать двойное нажатие для воспроизведения песен в плейлисте</string>
 	<string name="opt_marquee_title">Прокручивать заголовок текущей песни, если он не помещается на экран</string>
 	<string name="opt_prepare_next">Предварительно загружать следующую песню для того, чтобы сократить разрыв между песнями</string>
     <string name="opt_clear_list_when_playing_folders">Очистка существующего списка, перед проигрыванием папки, нового списка или альбома</string>
     <string name="opt_go_back_when_playing_folders">Вернуться к списку при воспроизведении папки, нового списка или альбома</string>
     <string name="opt_force_orientation">Принудительная ориентация экрана:</string>
-    <string name="opt_fade_in_focus">Приглушение громкости при звонке или другом прерывании из-вне:</string>
-    <string name="opt_fade_in_pause">Приглушение громкости после снятия с паузы:</string>
-    <string name="opt_fade_in_other">Приглушение громкости в начале воспроизведения после паузы:</string>
+    <string name="opt_fade_in_focus">Уменьшение громкости при звонке или другом прерывании извне:</string>
+    <string name="opt_fade_in_pause">Уменьшение громкости после снятия с паузы:</string>
+    <string name="opt_fade_in_other">Уменьшение громкости в начале воспроизведения после паузы:</string>
     <string name="hdr_display">Внешний вид</string>
     <string name="hdr_playback">Воспроизведение</string>
     <string name="hdr_behavior">Поведение</string>
     <string name="volume_control_type_integrated">Интегрированное с системой</string>
     <string name="volume_control_type_decibels">Децибелы</string>
     <string name="volume_control_type_percentage">Проценты</string>
-    <string name="custom">Пользовательский&#8230;</string>
+    <string name="custom">Задать значение&#8230;</string>
     <string name="never">Никогда</string>
     <string name="minute">минута</string>
     <string name="minutes">минут</string>
-    <string name="none">Ничто</string>
-    <string name="noneM">Ничто</string>
+    <string name="none">Нет</string>
+    <string name="noneM">Нет</string>
     <string name="portrait">Портретная</string>
     <string name="landscape">Ландшафтная</string>
-    <string name="dshort">Короткий</string>
-    <string name="dmedium">Средний</string>
-    <string name="dlong">Длинный</string>
+    <string name="dshort">Короткое</string>
+    <string name="dmedium">Среднее</string>
+    <string name="dlong">Длинное</string>
     <string name="up">Вверх</string>
     <string name="home">Домой</string>
     <string name="add_url_title">Добавить ссылку</string>
@@ -103,11 +103,11 @@
     <string name="item_preset">предустановка</string>
     <string name="goto_bass_boost">Перейти к настройкам басов&#8230;</string>
     <string name="enable_bass_boost">Включить усиление басов</string>
-    <string name="bass_boost_not_supported">Ваше устройство не поддерживает регулировку усиления баса :(</string>
-    <string name="bass_boost_strength_not_supported">Ваше устройство не поддерживает регулировку усиления баса :(</string>
+    <string name="bass_boost_not_supported">Ваше устройство не поддерживает усиление басов :(</string>
+    <string name="bass_boost_strength_not_supported">Ваше устройство не поддерживает усиление басов :(</string>
     <string name="visualizer">Визуализатор</string>
     <string name="random_mode">Случайный режим</string>
-    <string name="settings">Конфигурации</string>
+    <string name="settings">Настройки</string>
     <string name="about">О программе&#8230;</string>
     <string name="exit">Выход</string>
     <string name="move">Переместить</string>
@@ -124,11 +124,11 @@
     <string name="play_folder">Воспроизвести директорию</string>
     <string name="play_folder_sub">Воспроизвести директорию со вложенными каталогами</string>
     <string name="add_album">Добавить альбом</string>
-    <string name="play_album">Воспроизвести Альбом</string>
+    <string name="play_album">Воспроизвести альбом</string>
     <string name="remove_favorite">Удалить избранное</string>
-    <string name="previous">Предыдущий</string>
+    <string name="previous">Предыдущая</string>
     <string name="play_pause">Воспроизведение/Пауза</string>
-    <string name="next">Следующий</string>
+    <string name="next">Следующая</string>
     <string name="play">Воспроизведение</string>
     <string name="add">Добавить</string>
     <string name="unknownArtist">[Неизвестный исполнитель]</string>
