--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,10 +17,13 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="done">Done</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="got_it">Got it!</string>
     <string name="volume">Volume</string>
     <string name="msg_sel">Click to select more items</string>
     <string name="msg_move">Click to move selected items</string>
+    <string name="msg_loading">Loading&#8230;</string>
     <string name="msg_adding">Adding songs&#8230;</string>
     <string name="msg_select_song">Please, select a song to add</string>
     <string name="msg_select_folder_add">Please, select a folder to add</string>
@@ -39,6 +42,7 @@
     <string name="msg_play">This button adds to the playlist all songs in the folder and in its subfolders, and starts the playback.</string>
     <string name="msg_error_download_path">It was not possible to access the download folder :(</string>
     <string name="msg_error_exporting_settings">Something went wrong while exporting the settings :(</string>
+    <string name="opt_language">Language:</string>
     <string name="opt_use_alternate_typeface">Use dyslexia-friendly typeface</string>
     <string name="opt_auto_turn_off">Automatically turn off the player after:</string>
     <string name="opt_keep_screen_on">Keep screen always on</string>
@@ -127,7 +131,7 @@
     <string name="play_album">Play album</string>
     <string name="remove_favorite">Remove favorite</string>
     <string name="previous">Previous</string>
-    <string name="play_pause">Play/Pause</string>
+    <string name="pause">Pause</string>
     <string name="next">Next</string>
     <string name="play">Play</string>
     <string name="add">Add</string>
@@ -138,7 +142,6 @@
 	<string name="length">Duration</string>
 	<string name="year">Year</string>
 	<string name="no_info">-</string>
-    <string name="language">Language</string>
     <string name="standard_language">Standard language</string>
 	<string name="artists">Artists</string>
     <string name="albums">Albums</string>
